# truco

./: .gitignore  Cargo.toml  Makefile  compress_files.py
src/: card.rs  deck.rs  game.rs  lib.rs  main.rs  player.rs  rank.rs  round.rs  round_points.rs  suit.rs  team.rs  turn.rs  turn_points.rs
tests/: card_tests.rs  deck_tests.rs  game_tests.rs  player_tests.rs  rank_tests.rs  round_points_tests.rs  suit_tests.rs  team_tests.rs  turn_points_tests.rs  turn_tests.rs
