[package]
name = "truco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
rand = "0.8.5"

[lib]
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "truco"
path = "src/main.rs"
